--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(PackageTest CXX)
 
-find_package(test_private_component_lib CONFIG REQUIRED COMPONENTS public_function)
+find_package(test_separate_component_lib CONFIG REQUIRED COMPONENTS compa_function)
 
 add_executable(example src/example.cpp)
-target_link_libraries(example test_private_component_lib::public_function)
+target_link_libraries(example test_separate_component_lib::compa_function)
